<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    tools:context=".ui.fragments.AuthenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="40dp"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/primaryColor"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/primaryColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#FFB703"
                android:layout_weight="1"
                android:text="@string/placelover"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_icon" />

        <EditText
            android:id="@+id/userName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_authenticate_layout"
            android:hint="@string/enter_username"
            android:padding="12dp"
            android:textStyle="italic"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_authenticate_layout"
            android:hint="@string/enter_email"
            android:inputType="text|textEmailAddress"
            android:padding="12dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/pw_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_authenticate_layout"
            android:hint="@string/enter_password"
            android:inputType="text|textPassword"
            android:padding="12dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/reenter_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/edit_text_authenticate_layout"
            android:hint="@string/re_enter_password"
            android:inputType="text|textPassword"
            android:padding="12dp"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/forgot_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="2dp"
                android:text="@string/forget_password"
                android:textColor="@color/primaryColor"
                android:textStyle="italic" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="2dp"
                android:text="@string/sign_up"
                android:textColor="@color/primaryColor"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            >

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/log_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="2dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/primaryColor"
                android:textStyle="italic" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>


        <Button
            android:id="@+id/authen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingVertical="16dp"
            android:text="@string/sign_in_btn"
            android:textSize="16sp"
            app:cornerRadius="6dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/primaryColor"
            android:textSize="18dp"
            android:textAlignment="center"
            android:text="@string/or"
            android:layout_marginBottom="10dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp"
            >

            <LinearLayout
                android:id="@+id/google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#205982"
                android:clickable="true"
                android:padding="8dp"
                android:textAlignment="center">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/google_icon"
                    android:src="@drawable/google_logo" />

                <TextView
                    android:id="@+id/google_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/log_in_with_google"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.cardview.widget.CardView>